Refactor in worker-service, add getting logs from Loki